<resources>
    <string name="app_name">ProyectoFinalEgresados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_mensajes">Mensajes</string>
    <string name="menu_empleos">Empleos</string>
    <string name="menu_nuevas_vacantes">Nuevas vacantes</string>
    <string name="menu_empleos_destacados">Empleos destacados</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="menu_cerrar_sesion">Cerrar sesion</string>

</resources>